# automation

./: .gitignore  Makefile  cabal.project  stack.yaml
automation-for-x11-via-shell/: automation-for-x11-via-shell.cabal
automation-for-x11-via-shell/sources/Automation/: X11.hs
automation-signature/: automation-signature.cabal
automation-signature/sources/Automation/: Keys.hs
automation-signature/sources/Prelude/: Automation.hs
automation-signatures/: automation-signatures.cabal
automation-signatures/sources/: CLIPBOARD.hsig  KEYBOARD.hsig
cabal/linux/: cabal.project
cabal/osx/: cabal.project
cabal/spiros/: README.md  build.sh  cabal.project
cabal/windows/: cabal.project
documents/: NOTES.md
nix/: default.nix  shell.nix
scripts/: watch.sh
xdotool/: Makefile  README.md  xdotool.cabal
xdotool/nix/: shell.nix
xdotool/sources/: Prelude_xdotool.hs  Xdotool.hs
xdotool/sources/Xdotool/: Core.hs  KeySymbol.hs  Shell.hs
xdotool/sources/Xdotool/Commands/: Key.hs  Search.hs  Type.hs
xdotool/sources/Xdotool/Options/: Global.hs  Key.hs  Search.hs  Type.hs
